[package]
name = "linuxver"
version = "0.1.0"
authors = ["pastoraleman <pastoraleman@users.noreply.github.com>"]
description = "Rust library to get the Linux kernel version as a parseable SemVer object"
repository = "https://github.com/pastoraleman/linuxver"
readme = "README.md"
keywords = ["linux","kernel"]
license = "MIT"

[dependencies]
nix = "^0.7.0"
semver = "^0.4.0"
