[package]
name = "linuxver"
version = "0.1.0"
authors = ["pwrdwnsys <pwrdwnsys@users.noreply.github.com>"]
description = "Rust library to get the Linux kernel version as a parseable SemVer object"
repository = "https://github.com/pwrdwnsys/linuxver"
readme = "README.md"
keywords = ["linux","kernel"]
license = "MIT"

[dependencies]
nix = "^0.7.0"
semver = "^0.4.0"
